# primal-mahjong-website

./: .env_example  .gitignore  Makefile  Procfile  README.md  README.rst  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: views.py
accounts/migrations/: 0001_initial.py
events/: models.py  urls.py  views.py
events/migrations/: 0001_initial.py
scripts/: release-tasks.sh  setup-dev-environment.sh
server/: asgi.py  settings.py  urls.py  wsgi.py
server/settings/: base.py  local.py  production.py
svelte/: package-lock.json
svelte/src/: App.svelte
templates/: base.html  cms_home.html
templates/accounts/: profile_view.html
templates/cms/: page.html
templates/components/: title.html
templates/events/: list.html
templates/www/: Svelte.html  index.html
www/: urls.py  views.py
