[tool.poetry]
name = "primalmahjong.club"
version = "0.1.0"
description = ""
authors = ["Michael Borden <michael@quiet.space>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
social-auth-app-django = "^5.0.0"
psycopg2-binary = "^2.9.1"
django-svelte = "^0.1.6"
django-subdomains = "^2.1.0"
whitenoise = "^6.0.0"
rollbar = "^0.16.2"
django-environ = "^0.8.1"
django-htmx = "^1.8.0"
django-cms = "^3.10.0"
gunicorn = "^20.1.0"
djangocms-text-ckeditor = "^5.0.1"
djangocms-style = "^3.0.0"
djangocms-link = "^3.0.0"
djangocms-file = "^3.0.0"
djangocms-picture = "^4.0.0"
djangocms-video = "^3.0.0"
djangocms-googlemap = "^2.0.0"
djangocms-snippet = "^3.0.0"
django-tailwind = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
