[tool.poetry]
name = "primalmahjong.club"
version = "0.1.0"
description = ""
authors = ["Michael Borden <michael@quiet.space>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
social-auth-app-django = "^5.0.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^6.0.0"
rollbar = "^0.16.2"
django-environ = "^0.8.1"
django-htmx = "^1.8.0"
gunicorn = "^20.1.0"
django-browser-reload = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
